--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<h1>Geo Intelligence</h1>
 				<p>Geoscience + Artificial Intelligence<br />
-				<a href="http://html5up.net">HTML5 UP</a>.</p>
+				<a href="http://html5up.net"></a>.</p>
 			</header>
 
 		<!-- Signup Form -->
